change get(0) to getFirst